--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><button class="Saskatchewan" onclick="myFunction13()">Saskatchewan</button></li>
         <li><button class="Yukon" onclick="myFunction14()">Yukon</button></li>       
         </ul> 
-    
+    <p>Please click maps to start</p>
     </div> 
 </nav>
     <script src="image_flipper.js"></script> 
